recipe for bok choy updated

--- a/recipes/bokchoy.html
+++ b/recipes/bokchoy.html
@@ -4,6 +4,10 @@
     </head>
 
     <body>
-        <h1></h1>
+        <h1>Stir Fried Bok Choy</h1>
+        <img src="../images/bokchoy.jpg">
+        <p>Recipe for Stir Fried Bok Choy</p>
+        <p>Bok choy is one of the many kinds of chinese cabbage and is highly resistant to cold weather. The name literally translates to white (bok) vegetable (choy).</p>
+        
     </body>
 </html>
