--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -3,9 +3,23 @@
     <head>
         <link rel="stylesheet" href="styles.css">
 
+        <!-- Insert logo -->
+        <img src="">
+
+        <!-- Empty links in header -->
+        <a href="">Link one</a>
+        <a href="">Link two</a>
+        <a href="">Link three</a>
+
     </head>
 
     <body>
+        <!-- Website Title -->
+        <div id="web_title">
+            <p>Trip to NYC Jan 2022 </p>
+        </div>
+        <!-- Description -->
+        <!-- Placeholder image -->
 
     </body>
 </html>
