--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -21,5 +21,25 @@
         <!-- Description -->
         <!-- Placeholder image -->
 
+        <div>
+            <!-- Title for pictures -->
+        </div>
+
+        <div  id="photo-container">
+            <!-- Four boxes for pictures -->
+            <div class="tile">
+                hello
+
+            </div>
+            <div class="tile">
+                <img src="./images/011290ba9229d09beb1a9bdba45e9a05fe39df34cc.jpg">
+            </div>
+
+        </div>
+
+        <div>
+            <!-- Quote -->
+        </div>
+
     </body>
 </html>
