--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
 
         <!-- Insert logo -->
-        <img src="">
+        <img src=""place holder>
 
         <!-- Empty links in header -->
         <a href="">Link one</a>
@@ -16,10 +16,16 @@
     <body>
         <!-- Website Title -->
         <div id="web_title">
-            <p>Trip to NYC Jan 2022 </p>
+            <p>NYC Trip Jan 2022 </p>
         </div>
-        <!-- Description -->
-        <!-- Placeholder image -->
+        
+        <div>
+            <!-- Description -->
+        </div>
+
+        <div>
+            <!-- Main picture -->
+        </div>
 
         <div>
             <!-- Title for pictures -->
@@ -28,12 +34,21 @@
         <div  id="photo-container">
             <!-- Four boxes for pictures -->
             <div class="tile">
-                hello
-
+                <img src="">
             </div>
             <div class="tile">
                 <img src="./images/011290ba9229d09beb1a9bdba45e9a05fe39df34cc.jpg">
             </div>
+            <div class="tile">
+                <img src="./images/011c806a087030710feaeb00fe1df281f4940103a4.jpg">
+            </div>
+            <div class="tile">
+                <img src="./images/012a92588fb3f93a57c4e5f5d4de1f8dd6dc580083.jpg">
+            </div>
+        </div>
+
+        <div id="img-subtext">
+            <p class="img-subtext"> Hello </p>
 
         </div>
 
