--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -27,28 +27,40 @@
             <!-- Main picture -->
         </div>
 
-        <div>
+        <!-- Container for tiled pics and description -->
+        <div id="tiles">
+            <div>
             <!-- Title for pictures -->
-        </div>
-
-        <div  id="photo-container">
-            <!-- Four boxes for pictures -->
-            <div class="tile">
-                <img src="">
             </div>
-            <div class="tile">
-                <img src="./images/011290ba9229d09beb1a9bdba45e9a05fe39df34cc.jpg">
+            <div  id="photo-container">
+                <!-- Four boxes for pictures and description-->
+                <div class="tile">
+                    <img src="">
+                </div>
+                <div class="tile">
+                    <img src="./images/011290ba9229d09beb1a9bdba45e9a05fe39df34cc.jpg">
+                </div>
+                <div class="tile">
+                    <img src="./images/011c806a087030710feaeb00fe1df281f4940103a4.jpg">
+                </div>
+                <div class="tile">
+                    <img src="./images/012a92588fb3f93a57c4e5f5d4de1f8dd6dc580083.jpg">
+                </div>
             </div>
-            <div class="tile">
-                <img src="./images/011c806a087030710feaeb00fe1df281f4940103a4.jpg">
+            <div id="img-subtext">
+                <div class="subtext">
+                    <p>hi</p>
+                </div>
+                <div class="subtext">
+                    <p>Hi </p>
+                </div>
+                <div class="subtext">
+                    <p>hi</p>
+                </div>
+                <div class="subtext">
+                    <p>hi</p>
+                </div>
             </div>
-            <div class="tile">
-                <img src="./images/012a92588fb3f93a57c4e5f5d4de1f8dd6dc580083.jpg">
-            </div>
-        </div>
-
-        <div id="img-subtext">
-            <p class="img-subtext"> Hello </p>
 
         </div>
 
