nav bar and footer

--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -3,20 +3,25 @@
     <head>
         <link rel="stylesheet" href="styles.css">
 
+    </head>
+
+
+    <body>
+        <div class="nav-bar">
+            
         <!-- Insert logo -->
         <img src=""place holder>
 
         <!-- Empty links in header -->
-        <a href="">Link one</a>
-        <a href="">Link two</a>
-        <a href="">Link three</a>
+        <a href="">About</a>
+        <a href="">Albums</a>
+        <a href="">Contact</a>
 
-    </head>
+        </div>
 
-    <body>
         <!-- Website Title -->
         <div id="web_title">
-            <p>NYC Trip Jan 2022 </p>
+            <h1>NYC Trip Jan 2022 </h1>
         </div>
         
         <div>
@@ -34,31 +39,21 @@
             </div>
             <div  id="photo-container">
                 <!-- Four boxes for pictures and description-->
-                <div class="tile">
-                    <img src="">
+                <div class="content-tile">
+                    <img src="./images/0198e2c57dce8e6b3b5eff9bbf15c09733fd3c7db5.jpg">
+                    <p>Helix</p>
                 </div>
-                <div class="tile">
+                <div class="content-tile">
                     <img src="./images/011290ba9229d09beb1a9bdba45e9a05fe39df34cc.jpg">
+                    <p>High line</p>
                 </div>
-                <div class="tile">
+                <div class="content-tile">
                     <img src="./images/011c806a087030710feaeb00fe1df281f4940103a4.jpg">
+                    <p>Statue of Liberty</p>
                 </div>
-                <div class="tile">
+                <div class="content-tile">
                     <img src="./images/012a92588fb3f93a57c4e5f5d4de1f8dd6dc580083.jpg">
-                </div>
-            </div>
-            <div id="img-subtext">
-                <div class="subtext">
-                    <p>hi</p>
-                </div>
-                <div class="subtext">
-                    <p>Hi </p>
-                </div>
-                <div class="subtext">
-                    <p>hi</p>
-                </div>
-                <div class="subtext">
-                    <p>hi</p>
+                    <p>Liberty Island Ferry</p>
                 </div>
             </div>
 
@@ -66,7 +61,16 @@
 
         <div>
             <!-- Quote -->
+            <p>Distance never separates us.</p>
+        </div>
+
+        <div>
+            <!-- Sign up link -->
+            <p>Sign up</p>
         </div>
 
     </body>
+    <footer>
+        <p>Copyright © The Odin Project 2022</p>
+    </footer>
 </html>
