--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -5,41 +5,37 @@
 
     </head>
 
-
+<!-- NAVBAR -->
     <body>
         <div class="ux_navbar">           
              <!-- Insert logo -->
              <div class="ux_headerImg">
-                <img src="">
+                <img src="" alt="IMAGE">
              </div>
             
-
-            <!-- Empty links in header -->
             <a href="">About</a>
             <a href="">Albums</a>
             <a href="">Contact</a>
         </div>
 
-        <!-- Website Title -->
-        <div id="web_title">
-            <h1>NYC Trip Jan 2022 </h1>
-            
-            <p1 class="title_description">OMWTSBMMG</p1>
-
-            <div class="ux_titlePic">
+<!-- HEADER -->
+        <div class="ux_header">
+            <div class="ux_title"> 
+                <h1>NYC Trip Jan 2022 </h1>
+                <p1 class="title_description">OMWTSBMMG</p1>
+                <button>Sign up</button>
+            </div>
+            <div class="ux_titleImg">
                 <img src="./images/01e0d4fec46e68b9c70e09fe9cbf3e6a688c786864.jpg">
             </div>
         </div>
 
-
-
-
         <!-- Container for tiled pics and description -->
-        <div id="tiles">
+        <div class="tiles">
             <div>
             <!-- Title for pictures -->
             </div>
-            <div id="photo-container">
+            <div class="photo-container">
                 <!-- Four boxes for pictures and description-->
                 <div class="content-tile">
                     <img src="./images/0198e2c57dce8e6b3b5eff9bbf15c09733fd3c7db5.jpg" alt="helix">
