--- a/First webpage/index.html
+++ b/First webpage/index.html
@@ -26,7 +26,7 @@
             <div class="ux_header">
                 <div class="ux_title"> 
                     <h1>NYC Trip Jan 2022</h1>
-                    <p1 class="title_description">OMWTSBMMG</p1>
+                    <p1 class="title_description">OMWTSBMMG. Vacation in New York City with Pam and Jocelyn. Jan 7, 2022 to Jan 21, 2022.</p1>
                     <button>Sign up</button>
                 </div>
                 <div class="ux_titleImg">
