--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <li><a href="./recipes/friedrice.html">Ginger Fried Rice</a></li>
             <li><a href="./recipes/bokchoy.html">Stir-Friend Bok Choy</a></li>
             <li><a href="./recipes/charsiu.html">Char Siu</a></li>
+            <li><a href="./RPSGame/rps.html">Rock paper scissors</a></li>
         </ul>
     </body>
 
